--- a/README.rmd
+++ b/README.rmd
@@ -1,48 +1,108 @@
 ---
-title: "Sustainable Growth: Exploring Integrative Multi-Trophic Aquaculture on the West Coast"
+title: "Extreme Winter Storms: Exploring the Impacts of Socioeconomic Inequalities in a Changing Climate"
 output:
   github_document:
     toc: false
+bibliography: ./bibs/combined.bib
 ---
 
 # Contents
 
-This repository contains an analysis of potential locations within the
-Economic Exclusion Zones (EEZ) along the West Coast of the US that are
-potentially suitable locations for integrative multi-trophic aquaculture
-(IMTA).
+This repository contains an analysis of blackout impacts during the Great Texas Freeze of 2021, evaluating socioeconomic disparities and spatial patterns of recovery across the Houston metropolitan area.
 
 # Techniques
 
-This repository highlights a variety of skills and techniques including:
+This repository showcases a range of advanced technical skills and analytical methodologies, including:
 
 1.  Data Management
     -   Wrangling and tidying data using [@tidyverse], [@here], and
-        [@janitor]
+        [@janitor] to ensure clean, reproducible workflows
 
     -   Visualizations with [@ggplot2] and [@tmap]
 
-    -   Clear documentation and folder structures for reproducibility,
-        collaboration, and modularity
+    -   Implementation of organized folder structures and detailed documentation to facilitate reproducibility and collaborative potential
 
-    -   Integration of conditional statements and custom checks to
-        increase reproducibility, error handling, and modularity
+    -   Integration of error handling and validation checks to maintain data integrity, including conditional statements for spatial and statistical consistency
 
     -   Development of generalizable functions to allow for
         reproducibility and flexibility in analyses
 2.  Geospatial Analysis
-    -   Handling spatial data with [@terra] and [@sf]
-    -   Generating informative interactive maps with [@tmap]
-    -   Map algebra with spatial objects within [@terra] and [@sf]
-3.  Sustainable Fisheries Science
-    -   Adapting concepts from [@gentry2017] and [@troell2009] to
-        analyze potential locations within the West Coast EEZs that are
-        suitable for integrative multi-trophic aquaculture (IMTA) with
-        oysters and a variety of potential finfish species
+    -   Manipulating spatial data with [@terra] and [@sf], including advanced spatial operations such as intersections, raster manipulation, and spatial weighting
+    
+    -   Creating dynamic, interactive visualizations using [@tmap] to explore and communicate geospatial data insights
+    
+    -   Leveraging geospatial overlays and zonal statistics to assess the relationship between socioeconomic variables and blackout classifications
+    
+    -   Standardizing spatial resolution and alignment across diverse datasets to ensure consistency in geospatial analyses
+3.  Analysis of Socioeconomic Disparities
+    -   Integrating census tract-level socioeconomic data to explore disparities in blackout status following extreme weather events
 
-    -   Integration of flexible species-specific tolerances throughout
-        the spatial analyses
+    -   Employing spatially weighted methods to classify blackout status across multiple scales, from individual homes to census tracts
+    
+    -   Comparing results from different classification approaches (e.g., individual home versus census tract level) to identify methodological differences and their implications for socioeconomic interpretations
 
 # Data
 
--  
+    -   The first dataset contains remote sensing images from the [Visible Infrared Imaging Radiometer Suite (VIIRS)](https://en.wikipedia.org/wiki/Visible_Infrared_Imaging_Radiometer_Suite) onboard the Suomi satellite, which captures pre-storm and post-storm light intensity changes to evaluate blackout statuses spatially and temporally [@viirs_nasa_laads].
+    
+    -   The second dataset is [Open Street Map (OSM)](https://www.openstreetmap.org/#map=4/38.01/-95.84) data for home-level resolution, including road networks and infrastructure to account for essential services and accessibility [@openstreetmap]. This contains two main datasets:
+    
+    1. Roads:
+        -   Highways account for a large portion of the night lights observable from space, so to minimize falsely classifying areas that regularly experience reduced traffic levels as having experienced a blackout, we will ignore residential buildings that are within 200m of highways.
+    2.   Homes:
+        -   The OSM data contains information for all the buildings within the area, but we are only interested in considering residential buildings since we will be assigning socioeconomic status to these features based on census data.
+    
+    -   The final dataset contains 2019 census tract data collected by the [US Census Bureau's American Community Survey](https://www.census.gov/programs-surveys/acs) for the Houston metropolis. Census tract geometries were obtained from shapefiles, enabling spatial overlays and intersection analyses with blackout zones [@acs_us_census].
+
+
+# Repository Structure
+
+``` bash
+      .
+      ├── README.md
+      ├── README.rmd
+      ├── bibs
+      │   ├── combined.bib
+      │   ├── packages.bib
+      │   └── references.bib
+      ├── code
+      │   ├── custom.css
+      │   ├── houston_extreme_storms.html
+      │   └── houston_extreme_storms.qmd
+      ├── data
+      │   ├── ACS_2019_5YR_TRACT_48_TEXAS.gdb
+      │   │   ├── a00000001.TablesByName.atx
+      │   │   ├── a00000001.gdbindexes
+      │   │   ├── a00000001.gdbtable
+      │   │   ├── a00000001.gdbtablx
+      │   │   └── ...
+      │   ├── OSM
+      │   │   ├── gis_osm_buildings_a_free_1.gpkg
+      │   │   └── gis_osm_roads_free_1.gpkg
+      │   └── VNP46A1
+      │       ├── VNP46A1.A2021038.h08v05.001.2021039064328.tif
+      │       ├── VNP46A1.A2021038.h08v06.001.2021039064329.tif
+      │       └── ...
+      ├── figures
+      │   ├── animations
+      │   │   └── nightlight_intensity_animation.gif
+      │   ├── density_plots
+      │   │   ├── houston_final_density_plot.png
+      │   │   └── ...
+      │   ├── maps
+      │   │   ├── NL_02072021_crop_map.png
+      │   │   ├── homes_interactive_map.html
+      │   │   ├── lib
+      │   │   │   ├── Proj4Leaflet-1.0.1
+      │   │   │   │   └── proj4leaflet.js
+      │   │   │   └── ...
+      │   │   └── tracts_interactive_map.html
+      │   └── tables
+      │       ├── blackout_summary_kable.html
+      │       ├── combined_table_kable.html
+      │       └── ...
+      ├── houston-storms.Rproj
+      └── structure.txt
+```
+
+# References
